k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: credit-risk
  labels:
    name: credit-risk
