k8s/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: credit-risk-api-canary
  namespace: credit-risk
  labels:
    app: credit-risk-api
    traffic: canary
spec:
  type: ClusterIP
  selector:
    app: credit-risk-api
    version: green
  ports:
    - name: http
      port: 80
      targetPort: 8000
